--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 :root {
-  --middle-blue: #3BB8A3;
-  --cadet-blue: #2F9382;
-  --blue-munsell: #236E62;
-  --steel-teal: #184941;
+  --off-white: #e3e0cf;
+  --sky-blue: #c5d5cb;
+  --blue-normal: #70a5b5;
+  --whitish-grey: #9fa8a3;
 }
 
 header {
-  background-color: var(--middle-blue);
+  background-color: var(--off-white);
   color: blue;
   padding-top: 80px;
   padding-bottom: 100px;
@@ -64,15 +64,15 @@ nav li {
   text-shadow: 2px 2px 5px #db5f79;
 }
 
-main {
-  background-color: var(--blue-munsell);
-}
-
 #aboutme {
-  background-color: var(--cadet-blue);
+  background-color: var(--sky-blue);
   margin: auto;
   padding: 5px;
   color: black;
+}
+
+main {
+  background-color: var(--blue-normal);
 }
 
 h3 {
@@ -130,7 +130,7 @@ h2 {
   color: black;
 }
 
-.technology {
+.projectDescription {
   text-align: center;
   color: green;
 }
@@ -152,7 +152,7 @@ h2 {
 }
 
 footer {
-  background-color: var(--steel-teal);
+  background-color: var(--whitish-grey);
   text-align: center;
   padding: 20px 20px;
   font-weight: bolder;
