--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ nav li {
 
 main {
   background-color: var(--blue-normal);
+  justify-content: center;
 }
 
 h3 {
@@ -115,6 +116,7 @@ h3 {
   border-radius: 36px;
   background-image: linear-gradient(to bottom, yellow, rgba(0, 0, 255, 0.5));
   font-variant: small-caps;
+  justify-content: center;
 }
 
 .button:hover {
